syntax = "proto3";

package spine.test.tools.protoc;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.tools.protoc";
option java_outer_classname = "DocumentsProto";
option java_multiple_files = true;

// A document message.
//
// A document message is like an event, but has no temporal binding.
//
message WeatherForecast {

    // Any kind of combination of these traits is possible for a single forecast.

    bool sunny = 1;
    bool rainy = 2;
    bool snowy = 3;
    bool windy = 4;

    message Temperature {

        // If the temperature is degrees by Celsius does not fit a 32-bit integer,
        // run for your life.
        sint32 degrees_celsius = 1;
    }

    Temperature low_estimate = 5;
    Temperature high_estimate = 6;
}
