syntax = "proto3";

package spine.test.protoc;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.test.protoc";
option java_outer_classname = "EveryIsNestedProto";
option java_multiple_files = true;

option (every_is).java_type = "EducationalInstitution";
option (every_is).generate = true;

message Kindergarten {
}

message School {

    message Elementary {}

    message HighSchool {}
}

message University {

    message College {
    }
}
