syntax = "proto3";

package spine.tools.protoc;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.protoc";
option java_outer_classname = "TestCommandsProto";
option java_multiple_files = true;

// This file contains test command types.
//
// The name of the file matches the Spine convension. All the generated classes should implement
// `io.spine.base.CommandMessage`.

message CreateUser {
    string id = 1;
}

message NotifyUser {
    string id = 1;
    string text = 2;
}
