syntax = "proto3";

package spine.tools.protoc;

import "spine/options.proto";

option (type_url_prefix) = "type.spine.io";
option java_package = "io.spine.tools.protoc";
option java_outer_classname = "Rejections";
option java_multiple_files = false;

option (every_is) = "UserRejection";

message UserAlreadyExists {
    string id = 1;
}
